# brains

./: Cargo.toml  README.md
examples/: 7x7_mnist.data.json  simple_linear_classifier.data.json  simple_linear_classifier.rs
src/: activations.rs  dataset.rs  layers.rs  lib.rs  ops.rs
src/ops/: blocks.rs  inputs.rs  outputs.rs
