[package]
name = "Brains"
version = "0.1.0"
authors = ["Corallus-Caninus <ward.joshua92@yahoo.com>"]
edition = "2021"

[profile.release]
lto=true
incremental=true
opt-level=3

[dependencies]
enclose = "1.1.8"
toml = "0.5.8"
serde_derive = "1.0.130"
serde = "1.0.136"
# tensorflow = {version = "0.17.0", features = ["tensorflow_gpu"]}
tensorflow = {version = "0.17.0"}
rand = "0.8.4"
half = "1.7.1"
itertools = "0.10.3"
uuid = { version = "0.8.2", features = ["v4"] }
serde_json = "1.0.79"
anyhow = "1.0.53"
rayon = "1.5.1"